Revert to Java 11 to support ARMv6 32-bit architecture