@@ -2,6 +2,7 @@ package rs.laxsrbija.chores.application.service;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import rs.laxsrbija.chores.domain.Overview;
@@ -22,12 +23,12 @@ class OverviewService {
         .filter(task -> task.getOccurrence().getDaysUntilNextOccurrence() >= 0)
         .sorted(Comparator.comparingLong(task -> task.getOccurrence().getDaysUntilNextOccurrence()))
         .limit(MAX_OVERVIEW_TASK_SIZE)
-        .toList();
+        .collect(Collectors.toList());
 
     final List<Task> overdue = tasks.stream()
         .filter(task -> task.getOccurrence().getDaysUntilNextOccurrence() < 0)
         .sorted(Comparator.comparingLong(task -> task.getOccurrence().getDaysUntilNextOccurrence()))
-        .toList();
+        .collect(Collectors.toList());
 
     return Overview.builder()
         .upcoming(upcoming)
